# is-openpose

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  rpc.cpp  skeleton.cpp  stream.cpp
docker/gpu/cuda9cudnn7/: Dockerfile.is_cuda9_cudnn7  Dockerfile.is_cuda9_cudnn7_caffe  Dockerfile.openpose_cuda9_0
msgs/: skeleton.proto
openpose/: Dockerfile  Makefile
protos/: CMakeLists.txt  skeleton.proto
utils/: CMakeLists.txt  skeletons.cpp  skeletons.hpp
viewer/: ispy.py  viewer.py
viewer/ismsgs/: __init__.py  skeleton_pb2.py
